Ready for patch 35360
Can parse position details on all in game units - their spawn, movements, ownership changes, and deaths

Can detect 'Team League' games

Many of the game events have comments added from their Starcraft 2 counterparts

--- a/Heroes.ReplayParser/Heroes.ReplayParser.csproj
+++ b/Heroes.ReplayParser/Heroes.ReplayParser.csproj
@@ -64,13 +64,13 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Difficulty.cs" />
     <Compile Include="GameSpeed.cs" />
     <Compile Include="GameMode.cs" />
-    <Compile Include="TimelineEvent.cs" />
-    <Compile Include="Location.cs" />
+    <Compile Include="Unit.cs" />
     <Compile Include="mpq.header\MpqHeader.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayerType.cs" />
