--- a/Heroes.ReplayParser/Heroes.ReplayParser.csproj
+++ b/Heroes.ReplayParser/Heroes.ReplayParser.csproj
@@ -67,31 +67,30 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Difficulty.cs" />
-    <Compile Include="GameSpeed.cs" />
-    <Compile Include="GameMode.cs" />
-    <Compile Include="replay.resumable.events\ReplayResumableEvents.cs" />
+    <Compile Include="DataParser.cs" />
+    <Compile Include="MPQFiles\ReplayResumableEvents.cs" />
     <Compile Include="Unit.cs" />
-    <Compile Include="mpq.header\MpqHeader.cs" />
+    <Compile Include="MPQFiles\MpqHeader.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="PlayerType.cs" />
-    <Compile Include="replay.attributes.events\ReplayAttribute.cs" />
     <Compile Include="Replay.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="replay.attributes.events\ReplayAttributeEvents.cs">
+    <Compile Include="MPQFiles\ReplayAttributeEvents.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="replay.details\ReplayDetails.cs" />
-    <Compile Include="replay.game.events\ReplayGameEvents.cs" />
-    <Compile Include="replay.initData\ReplayInitData.cs" />
-    <Compile Include="replay.message.events\ChatMessage.cs" />
-    <Compile Include="replay.message.events\ChatMessageTarget.cs" />
-    <Compile Include="replay.message.events\ReplayMessageEvents.cs" />
-    <Compile Include="replay.server.battlelobby\ReplayServerBattlelobby.cs" />
-    <Compile Include="replay.tracker.events\ReplayTrackerEvents.cs" />
-    <Compile Include="Streams\BitReader.cs" />
+    <Compile Include="MPQFiles\ReplayDetails.cs" />
+    <Compile Include="MPQFiles\ReplayGameEvents.cs" />
+    <Compile Include="MPQFiles\ReplayInitData.cs" />
+    <Compile Include="MPQFiles\ReplayMessageEvents.cs" />
+    <Compile Include="MPQFiles\ReplayServerBattlelobby.cs" />
+    <Compile Include="MPQFiles\ReplayTrackerEvents.cs" />
+    <Compile Include="BitReader.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\MpqTool\MpqTool.csproj">
+      <Project>{fa50e172-836b-47bb-8745-60595e4fb12a}</Project>
+      <Name>MpqTool</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
