Statistics.cs parses the new tracker events containing new data, which were recently added to the replay file

--- a/Heroes.ReplayParser/Heroes.ReplayParser.csproj
+++ b/Heroes.ReplayParser/Heroes.ReplayParser.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="DataParser.cs" />
     <Compile Include="MPQFiles\ReplayResumableEvents.cs" />
+    <Compile Include="Statistics.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="MPQFiles\MpqHeader.cs" />
     <Compile Include="Player.cs" />
