Use .net standard, set up versioning and nuget variables

--- a/Heroes.ReplayParser.ConsoleApplication/ConsoleApplication.csproj
+++ b/Heroes.ReplayParser.ConsoleApplication/ConsoleApplication.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Heroes.ReplayParser\Heroes.ReplayParser.netstandard.csproj" />
+    <ProjectReference Include="..\Heroes.ReplayParser\Heroes.ReplayParser.csproj" />
   </ItemGroup>
 
 </Project>
