Try to fix automated build error

--- a/Heroes.ReplayParser/Heroes.ReplayParser.csproj
+++ b/Heroes.ReplayParser/Heroes.ReplayParser.csproj
@@ -9,6 +9,7 @@
 		<Description>A library for parsing Heroes of the Storm replay files (.StormReplay)</Description>
 		<RepositoryUrl>https://github.com/barrett777/Heroes.ReplayParser</RepositoryUrl>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<LangVersion>latest</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
