--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,10 @@ install:
  - git fetch --unshallow
 script:
  - dotnet build -c Release
+ - dotnet pack -c Release
 deploy:
   skip_cleanup: true
   provider: script
-  script:
- - dotnet pack -c Release
- - dotnet nuget push **/Heroes.ReplayParser.*.nupkg --api-key $NuGetApiKey --source https://api.nuget.org/v3/index.json
+  script: dotnet nuget push **/Heroes.ReplayParser.*.nupkg --api-key $NuGetApiKey --source https://api.nuget.org/v3/index.json
   on:
     branch: master
