--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script:
 deploy:
   skip_cleanup: true
   provider: script
-  script: dotnet nuget push **/Heroes.ReplayParser.*.nupkg --api-key $NuGetApiKey --source https://api.nuget.org/v3/index.json
+  script: dotnet nuget push **/Heroes.ReplayParser.*.nupkg --no-symbols true --api-key $NuGetApiKey --source https://api.nuget.org/v3/index.json
   on:
     branch: master
